2004-10-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-retrieve): Add autoload cookie.

2004-10-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-kantei.el (shimbun-get-headers): Don't escape
	Japanese parenthesis (it is not supported by old Emacsen).

2004-09-25  Yuya Nishida  <yuya@j96.org>

	* shimbun/sb-impress.el (shimbun-get-headers): Include subtitles
	in the subject strings.

2004-09-21  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-antenna.el (w3m-about-antenna): Revert 2004-09-16 change.

2004-09-16  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-antenna.el (w3m-about-antenna): Change the method to compare
	an arrived time to a last-modified time.

2004-09-07  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun-mark-unseen): Change default
	value.
	(mew-shimbun-scan-message): Move to the beginning of next line.
	(mew-shimbun-unseen-setup): Use the original function of Mew if it
	suport 'unread'.

2004-09-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-goto-url): Don't make a new history when reloading.
	(w3m-reload-this-page): Ditto.

	* w3m-hist.el (w3m-history-restore-position): Don't cause an error
	even if a page has shrunk.

2004-09-06  David Hansen  <david.hansen@gmx.net>

	* shimbun/sb-weeklyworldnews.el: New file.

	* shimbun/sb-emacswiki.el (shimbun-get-headers): Follow the change
	of the URL layout.
	(shimbun-rss-build-message-id): Ditto.

2004-09-01  Hiroaki Irokawa  <irorin@terra.dti.ne.jp>

	* shimbun/sb-vinelinux.el (shimbun-vinelinux-group-path-alist):
	Add errata.3x.i386, errata.3x.ppc and errata.3x.alpha groups.

2004-08-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-itmedia.el (shimbun-itmedia-group-alist): Fetch
	/enterprise/articles/ as well as /news/articles/ in burst group.
	(shimbun-get-headers): Ignore headers if there's no subject.

2004-08-23  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun-mark-re-retrieve): Change